Fix btn-group, do not wrap buttons group within tables

--- a/frontend/web/css/panel.css
+++ b/frontend/web/css/panel.css
@@ -3,6 +3,15 @@ body {
 }
 
 
+.btn-group-fix {
+    white-space: nowrap;
+}
+
+.btn-group-fix .btn {
+    float: none;
+    display: inline-block;
+}
+
 /* Attachment */
 
 .comment .comment-text p {
